# eqnorm

./: .gitignore  LICENSE  README.md  pyproject.toml
eqnorm/: calculator.py  config.py  eqnorm-max-mptrj.py  eqnorm-mptrj.py  eqnorm-omat.py  eqnorm.py  eqnorm_pro.py  grad_output.py  layernorm.py  load_data.py
eqnorm/model_settings/: eqnorm-max-mptrj.yaml  eqnorm-mptrj.yaml  eqnorm-omat.yaml
